--- a/index.html
+++ b/index.html
@@ -1,13 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jhankar portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner flaxible">
+        <div class="apple">
+
+            <h1>welcome to</h1>
+            <h1> <span class="heading"> Peter Parker </span>World </h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.
+                That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development
+                Hero.
+            </p>
+            <a class="button" target="-blank" href="https://discord.com/login">hire me</a>
+        </div>
+        <div class="apple">
+            <img src="my-bg.png" alt="">
+
+        </div>
+
+    </section>
+    <section class="bgimeage flaxible">
+        <div class="apple">
+            <img src="jhankar2.png" alt="">
+
+        </div>
+        <div class="apple">
+            <h1>deam big</h1>
+            <h3>become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="button" href="https://discord.com/login" target="_blank">Downlode resume </a>
+        </div>
+    </section>
+    <section class="experiencearia">
+        <h1>Expriences</h1>
+
+        <div class="flaxible">
+            <div id="ero" class="exaria">
+                <h2>full stack web developer</h2>
+                <h5 class="heading">2021-present pro level developer </h5>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.
+
+                </p>
+            </div>
+            <div id="zero" class="exaria">
+                <h2>Baby web developer</h2>
+                <h5 class="heading">2020-2021 programing hero learner</h5>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+    </footer>
+
+
+
 </body>
+
 </html>
